Center aligned paragraphs, fixed line spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,27 +1,39 @@
 body {
-	font-family: 'Ubuntu', sans-serif;
-	background-image: url("../images/background_passive.png");
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+    background-image: url("../images/background_passive.png");
 }
 
 #wrapper {
-	width: 50%;
+    width: 50%;
 
-	background-color: rgb(255, 255, 255);
-	margin-left: auto;
-	margin-right: auto;
-	padding: 1.5%;
-	border-radius: 1em;
-	-moz-border-radius: 1em;
-	-webkit-border-radius: 1em;
-	box-shadow: .5em .5em .5em rgb(73, 73, 73);
+    background-color: rgb(255, 255, 255);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5%;
+    border-radius: 1em;
+    -moz-border-radius: 1em;
+    -webkit-border-radius: 1em;
+    box-shadow: .5em .5em .5em rgb(73, 73, 73);
 }
 #header {
-	
+
 }
 
 #content {
+    padding-top: 3%;
+    margin: auto;
+    max-width: 50%;
+}
+#content h2 {
+    padding-top: 2%;
+}
+#content p {
+    line-height: 28px;
 }
 
 #footer {
+    padding-top: 3%;
+    text-align: center;
 }
 
